# databricks-genie-client

./: LICENSE  README.md  follow_up_response.json  follow_up_response_1.json  follow_up_response_2.json  test_usage.py
examples/: basic_usage.py
genie_client/: __init__.py  config.py  pyproject.toml
genie_client/core/: api_client.py  auth.py  client.py
genie_client/exceptions/: custom_errors.py
genie_client/models/: response_models.py
genie_client/utils/: constants.py  env.py  formatting.py  logging.py  prompts.py  retry.py  validation.py
tests/: test_client.py
